= BinData Changelog

== Version 1.3.0 (2011-xx-xx)

* Updated specs to rspec-1.3.0
* Added BinData::Base(#new, #initialize_instance) to speed up
  instantiation of multiple objects.

== Version 1.2.2 (2010-12-14)

* Added Base.bindata_name method.
* Removed Base#done_read to reduce memory usage and cpu usage.
* Derived classes should now use do_read et al, instead of _do_read.
* Added predefinition of record fields to improve speed.
* Made compatible with ruby 1.9.2.  Thanks to Andrew Watts.

== Version 1.2.1 (2010-07-20)

* Updated specs to be compatible with ruby 1.9.1

== Version 1.2.0 (2010-07-09)

* Deprecated Base#register. Use #register_self or #register_subclasses instead.
* Syntax improvement.  Array, Structs and Choices can now use blocks to
  specify fields.
* Reduced startup time (suggestion courtesy of Mike Ryan).

== Version 1.1.0 (2009-11-24)

* Allow anonymous fields in Records and Primitives.
* Add the ability to skip over unused data.
* Allow Records, Primitives and Wrappers to be derived from.
* Classes for integers are now defined on demand.

== Version 1.0.0 (2009-09-13)

* Is now compatible with Ruby 1.9
* Added reference manual.
* Added #rel_offset to Base.
* Removed support for deprecated functionality.

== Version 0.11.1 (2009-08-28)

* Allow wrapped types to work with struct's :onlyif parameter
* Use Array#index instead of #find_index for compatibility with Ruby 1.8.6
  (patch courtesy of Joe Rozner).

== Version 0.11.0 (2009-06-28)

* Sanitizing code was refactored for speed.
* Arbitrary sized integers and bit fields are now automatically instantiated.
* Add ability to wrap existing types and override their parameters.

== Version 0.10.0 (2009-04-17)

* Arbitrary byte sized integers are now supported (e.g. 24bit, 808bit).
* Renamed String :trim_value parameter to :trim_padding.
* BinData::Array now behaves more like Ruby's Array.
* Added debug_name
* Added ability to trace reading