@@ -73,12 +73,6 @@ module BinData
 
     mandatory_parameter :struct_params
 
-    def initialize(parameters = {}, parent = nil)
-      super
-
-      initialize_instance
-    end
-
     def initialize_instance
       @struct = BinData::Struct.new(get_parameter(:struct_params), self)
     end
