@@ -3,6 +3,7 @@
 == Version 1.3.0 (2011-xx-xx)
 
 * Updated specs to rspec-1.3.0
+* Objects deriving from BinData::Base should no longer override #initialize.
 * Added BinData::Base(#new, #initialize_instance) to speed up
   instantiation of multiple objects.
 
